add path. details